--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
 
 body {
   font-family: sans-serif;
-  margin: 0;
+  margin: 3rem 0;
   background-color: #e7f8f8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
